--- a/css/contacto.css
+++ b/css/contacto.css
@@ -113,10 +113,12 @@
     flex-direction: column;
     gap: 1rem;
     width: 90%;
+    align-items: center;
 }
 
 .form__input-nombre, .form__input-email, .form__input-telefono, .form__input-mensaje{
     padding: 0.5em;
+    width: 100%;
 }
 
 .form__input-mensaje{
@@ -126,4 +128,30 @@
 .form__title-formulario, .form__subtitle-formulario{
     margin: 0;
     text-align: center;
+}
+
+.form__button{
+    background-color: var(--button-color);
+    border-radius: 10px;
+    padding: 8px;
+    width: 120px;
+    border: none;
+    color: var(--button-text-color);
+    font-size: 1.1rem;
+    font-weight: bold;
+    cursor:pointer;
+    transition: var(--all-transition);
+}
+
+.form__button:hover{
+    background-color: var(--button-color-active);
+
+}
+
+
+/* querys */
+@media (min-width: 900px){
+    .form{
+        width: 60%;
+    }
 }
